--- a/index.html
+++ b/index.html
@@ -34,7 +34,8 @@
                  <h5 class="point-title">Mobile enabled</h5>
                  <p class="point-description">Listen to your music on the go. This streaming service is available on all mobile platforms.</p>
              </div>
-         </section>"
+         </section>
+         <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
          <script src="scripts/utilities.js"></script>
          <script src="scripts/landing.js"></script>
      </body>
