--- a/collection.html
+++ b/collection.html
@@ -20,6 +20,7 @@
          </nav>
      <section class="album-covers container clearfix">
     </section>
+        <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
          <script> src="scripts/collection.js"</script>
      </body>
  </html>
