--- a/index.html
+++ b/index.html
@@ -9,8 +9,13 @@
          <link rel="stylesheet" type="text/css" href="styles/main.css">     <link rel="stylesheet" type="text/css" href="styles/landing.css">
      </head>
      <body class = "landing">
-         <nav class = "navbar"> <!-- navigation bar -->
-             <img src="assets/images/bloc_jams_logo.png" alt="bloc jams logo" class="logo">
+         <nav class = "navbar"> <!-- navigation bar -->         
+             <a href="index.html" class="logo">
+                <img src="assets/images/bloc_jams_logo.png" alt="bloc jams logo">
+             </a>
+             <div class="links-container">
+                 <a href="collection.html" class="navbar-link">collection</a>
+             </div>
          </nav>
          <section class="hero-content"> <!-- hero content -->
              <h1 class="hero-title">Turn the music up!</h1>
@@ -32,5 +37,7 @@
                  <p class="point-description">Listen to your music on the go. This streaming service is available on all mobile platforms.</p>
              </div>
          </section>
+         <script src="scripts/utilities.js"></script>
+         <script src="scripts/landing.js"></script>
      </body>
  </html>
