--- a/album.html
+++ b/album.html
@@ -66,7 +66,8 @@
                      </div>
                  </div>
              </div>
-         </section>
+         </section>         
+         <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
          <script src="scripts/album.js"></script>
      </body>
  </html>
