--- a/collection.html
+++ b/collection.html
@@ -23,5 +23,6 @@
 
      </section>
          <script src="scripts/collection.js"></script>
+         <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
      </body>
  </html>
