--- a/album.html
+++ b/album.html
@@ -47,8 +47,8 @@
                          <span class="ion-skip-forward"></span>
                      </a>
                  </div>
-                 <div class="control-group currently-playing">             <h2 class="song-name">My dumb song</h2>
-                     <h2 class="artist-song-mobile">My dumb song - Fallout Boy</h2>                     
+                 <div class="control-group currently-playing">             <h2 class="song-name"></h2>
+                     <h2 class="artist-song-mobile"></h2>                     
                         <div class="seek-control">
                          <div class="seek-bar">
                              <div class="fill"></div>
@@ -67,7 +67,8 @@
                  </div>
              </div>
          </section>         
-         <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
+         <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>     
+         <script src="scripts/fixtures.js"></script>
          <script src="scripts/album.js"></script>
      </body>
  </html>
